src/app/post/components/post-list/post-list.component.scss
@import '../../../../assets/scss/color';
@import '../../../../assets/scss/typography';
@import '../../../../assets/scss/shapes';
@import '../../../../assets/scss/breakpoint';

.section-container {
  background: $grey-6;
  .row-border {
    border-bottom: 1px dashed $grey-4;
    margin: 16px 0;
  }
  h2 {
    font-style: italic !important;
    text-transform: uppercase;
  }
}
.last-child {
  ::ng-deep .post {
    border: 0;
  }
}
.list-container {
  @media #{$tablet} {
    width: 100%;
  }
  width: 70%;
  h2 {
    @media #{$large-phone} {
      @include cn-bold-22;
    }
    @include cn-bold-28;
    color: $grey-2;
  }
  .columnPosts {
    @media #{$large-phone} {
      display: none !important;
    }
    width: 50%;
  }
  .columnPostsMobile {
    display: none !important;
    @media #{$large-phone} {
      display: flex !important;
    }
  }
}
.project-container {
  &.desktop {
    @media #{$tablet} {
      display: none !important;
    }
  }
  &.mobile {
    display: none !important;
    @media #{$tablet} {
      display: flex !important;
      width: 100%;
    }
  }
  width: 20%;
  height: 100%;
  min-width: 306px;
  @include background-hash($secondary-color);
  border: 1px solid $secondary-color;
  border-radius: 6px;
  .background-project-container {
    width: 100%;
    height: 100%;
    background: $white;
    border-radius: 6px;
    .project-content {
      @media #{$large-phone} {
        padding: 10px 32px 0px 36px;
      }
      padding: 18px 32px 26px 36px;
      fill: $secondary-color;
      stroke: $secondary-color;
      &.mobile {
        text-align: left;
      }
      text-align: center;
      h2 {
        @media #{$large-phone} {
          @include cn-bold-22;
        }
        @include cn-bold-26;
        color: $secondary-color;
        margin-bottom: 0;
      }
    }
  }
}

